[project]
name = "beyond-mcp"
version = "0.1.0"
description = "MCP server for Pangolin BEYOND laser software — show control, cue management, zone configuration, and live parameter control via OSC"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [{name = "Drohi", email = "info@ecube-entertainment.com"}]
dependencies = [
  "mcp>=1.0",
]

[project.scripts]
beyond-mcp = "beyond_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/beyond_mcp"]

[dependency-groups]
dev = [
  "pytest>=9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
